# bazel-file-ops-component

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  INTEGRATION.md  LICENSE  MODULE.bazel  PHASE1_SUMMARY.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  SIGNING_ANALYSIS.md  WORKSPACE.bazel  bazel-bazel-file-ops-component  bazel-bin  bazel-out  bazel-testlogs
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  oci-publish.yml  performance.yml  release.yml  security.yml
docs-site/: README.md  astro.config.mjs  package-lock.json  package.json
docs-site/.astro/: content-modules.mjs  content.d.ts
docs-site/src/content/docs/: index.mdx
docs-site/src/content/docs/api-reference/: index.mdx
docs-site/src/content/docs/examples/: index.mdx
docs-site/src/content/docs/getting-started/: index.mdx
docs-site/src/content/docs/installation/: index.mdx
docs-site/src/content/docs/integration/: index.mdx
docs-site/src/content/docs/security/: index.mdx
docs-site/src/content/docs/troubleshooting/: index.mdx
docs-site/src/styles/: custom.css
testdata/: BUILD.bazel  go.mod  integration_test.go  integration_tests.bzl  sample_workspace_config.json
tinygo/: BUILD.bazel  go.mod  go.sum  json_bridge.go  json_bridge_test.go  main.go  operations.go  operations_test.go  security.go  wit_bindings.go  workspace.go
wit/: BUILD.bazel  file-operations.wit
